# YAPL

./: .gitignore  Errors.py  README.md  grammar.txt  hello_world.yapl  interpreter.py  lexer.py  nodes.py  parser.out  parser.py  parsetab.py  pyproject.toml
Nodes/: Expression.py  Factor.py  Identifier.py  Literal.py  NoOperation.py  Program.py  StructMember.py  Symbols.py  Term.py
Nodes/Functions/: Arguments.py  Call.py  Function.py
Nodes/Statements/: Assignment.py  Compound.py  Expression.py  Generic.py  List.py  Print.py  StructAssignment.py
Nodes/Statements/Conditional/: If.py
Nodes/Statements/Declaration/: List.py  Struct.py  StructVariable.py  Variable.py  VariableList.py
Nodes/Statements/Iterative/: DoWhile.py  For.py  LegacyFor.py  While.py
Productions/: Empty.py  Error.py  Expression.py  Factor.py  Literal.py  Program.py  Term.py
Productions/Functions/: Arguments.py  Call.py  Generic.py
Productions/Statements/: Assignment.py  Compound.py  Declaration.py  Expression.py  Generic.py  List.py  Print.py  Type.py
Productions/Statements/Conditional/: If.py
Productions/Statements/Declaration/: Function.py  List.py  Struct.py  Variable.py  VariableList.py
Productions/Statements/Iterative/: DoWhile.py  For.py  While.py
State/: Container.py  Function.py  Scope.py  Structure.py  SymbolTable.py  Variable.py
test_cases/: do_while_loops.txt  expressions.txt  for_loops.txt  hello_world.yapl  if_else.txt  standard_output.txt  structs.txt  variables.txt
