[tool.poetry]
name = "yapl"
version = "0.1.0"
description = ""
authors = ["Mohsin-Ul-Islam <mohsinulislam180@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ply = "^3.11"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
